<resources>
    <string name="app_name">Carteira de Vacina Digital</string>
    <string name="title_activity_login">Entrar</string>
    <string name="prompt_cpf">CPF</string>
    <string name="prompt_senha">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign">Cadastre-se</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="welcome">"Bem vindx !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="acao_cadastrar">"Cadastrar"</string>

    <string name="ou">ou</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_confsenha">Confirmar Senha</string>
    <string name="title_activity_painel_pessoa">Painel</string>
    <string name="prompt_sangue">Tipo Sanguíneo</string>
    <string name="prompt_sus">Cartão do SUS</string>
    <string name="prompt_parentesco">Parentesco</string>

    <string name="prompt_tipo_vacina">Tipo de Vacina</string>
    <string name="prompt_data">Data</string>
    <string name="prompt_lote">Lote</string>
    <string name="prompt_validade">Validade</string>
    <string name="prompt_responsavel">Responsável</string>
    <string name="prompt_unidade">Unidade</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="search">Pesquisar...</string>


    <string name="action_print">Imprimir</string>
    <string name="action_web_view">Saiba mais sobre vacinas</string>

    <string name="menu_edit">Editar</string>
    <string name="menu_remover">Apagar</string>
    <string name="pessoa">Pessoa</string>


</resources>
